# Qt-Gst-Camera

./: CMakeLists.txt  CMakeUserPresets.json  README.md
qdarkstyle/: style.qrc
src/: gstreamerhandler.cpp  gstreamerhandler.h  imageprocessing.cpp  imageprocessing.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  styleloader.cpp  styleloader.h  videoplayer.cpp  videoplayer.h
